[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tomography"
version = "0.1.0"
description = "Optimization based tomography alignment pipeline"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "pyyaml",
    "loguru",
    "tqdm",
    "opencv-python"
]

[tool.setuptools.packages.find]
include = ["tomography*"]